# GeoGals

./: .coverage  .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: geogals_workflow.yml
docs/: conf.py  geogals.rst  index.rst  paper.md
docs/tutorials/: 01_Semivariograms (Visual Data Analysis).ipynb  01_Semivariograms (visual data analysis).ipynb  02_Fitting a Geostatistical Model.ipynb  03_Kriging (Estimation and Prediction).ipynb  Prologue -- Preprocessing PHANGS.ipynb
geogals/: .gitignore  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
geogals/.github/: ISSUE_TEMPLATE.md
geogals/docs/tutorials/: 01_Semivariograms (visual data analysis).ipynb
src/GeoGals/: GeoGals.py
src/geogals/: __init__.py  geogals.py
src/geogals/phangs/: phangs.py
tests/: test_console.py
