[tool.poetry]
name = "GeoGals"
version = "0.1.0"
description = "A package for using geostatistical methods on real and simulated galaxy data."
authors = ["Benjamin Andrew Metha <methab@student.unimelb.edu.au>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/astrobenji/geogals"
repository = "https://github.com/astrobenji/geogals"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^2.0.0"
click = "^8.1.7"
requests = "^2.32.3"

[tool.poetry.scripts]
geo-gals = "GeoGals.console:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
