[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geogals"
version = "0.1.0"
description = "A publicly available repository for using geostatistical methods on real and simulated galaxy data."
readme = "README.rst"
authors = [
  {name = "Benjamin Metha", email = "methab@student.unimelb.edu.au"}
]
maintainers = [
  {name = "Benjamin Metha", email = "methab@student.unimelb.edu.au"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/astrobenji/geogals/issues"
changelog = "https://github.com/astrobenji/geogals/blob/master/changelog.md"
homepage = "https://github.com/astrobenji/geogals"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

